--- a/android_search/res/values/analytics.xml
+++ b/android_search/res/values/analytics.xml
@@ -2,7 +2,7 @@
 
 <resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
   <!--Replace placeholder ID with your tracking ID-->
-  <string name="ga_trackingId">UA-XXXX-Y</string>
+  <string name="ga_trackingId">UA-47284954-1</string>
 
   <!--Enable automatic activity tracking-->
   <bool name="ga_autoActivityTracking">true</bool>
