--- a/android_search/res/xml/preferences.xml
+++ b/android_search/res/xml/preferences.xml
@@ -3,12 +3,12 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 	<PreferenceCategory android:title="@string/internalization_title">
-	    <!-- <ListPreference 
+	    <ListPreference 
 	        android:key="eva_preference_currency"
 	        android:title="@string/currency_pref_title"
 	        android:summary="@string/currency_summary"
 	        android:entries="@array/entries_currency_preference"
-	        android:entryValues="@array/entryvalues_currency_preference" /> -->
+	        android:entryValues="@array/entryvalues_currency_preference" />
 	    <ListPreference 
 	        android:key="eva_preference_locale"
 	        android:title="Locale"
@@ -26,7 +26,7 @@
 	     -->
 	</PreferenceCategory>
 	
-	
+	<!-- 
     
     <PreferenceCategory android:title="@string/advanced_menu" >
         <EditTextPreference
@@ -88,6 +88,6 @@
          <CheckBoxPreference android:key="eva_context_ski"      android:title="Ski" />
          <CheckBoxPreference android:key="eva_context_explore"  android:title="Explore" />
        </PreferenceScreen>
-   </PreferenceCategory>
+   </PreferenceCategory> -->
 
 </PreferenceScreen>
