--- a/android_search/res/values/arrays.xml
+++ b/android_search/res/values/arrays.xml
@@ -91,7 +91,6 @@
     
     <string-array name="examples">
         <!-- <item>Fly from London to NYC next Tuesday morning</item> -->
-        <!-- <item>Hotel in NYC on Wednesday for 5 nights</item> -->
         <!-- <item>Fly from Minto to Heatherwood</item> -->
         <!-- <item>Hotels in Heatherwood</item> -->
         <!-- <item>Round trip flight from Istanbul to Nice France next Wednesday, stay in a 5 star hotel for one weeks</item> -->
@@ -104,6 +103,7 @@
         <item>3 Star hotels in Miami FL, Friday to Monday, sorted by price descending</item>
         <item>Hotels in Arlington on Friday, 4 nights</item>
         <item>5 Star in Paris sorted by price</item>
+        <item>New Orleans, Lousiana, US during March 4 to 10</item>
         <!-- <item>Fly to Madrid</item> -->
         <!-- <item>Train ride from NYC to Washington DC next Wednesday</item> -->
     </string-array>
