--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -158,4 +158,5 @@
     <color name="eva_chat_in_session_text">#404040</color>
     <color name="white">#fff</color>
     <color name="half_black">#88000000</color>
+    <color name="non_refundable">#ffd07040</color>
 </resources>
