room details show value-add, surcharges, policies, etc…

--- a/android_search/res/layout/select_hotel_room.xml
+++ b/android_search/res/layout/select_hotel_room.xml
@@ -82,7 +82,7 @@
         tools:ignore="ContentDescription" >
     </ImageView>
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/roomListView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -90,7 +90,7 @@
         android:cacheColorHint="#00000000"
         android:divider="@drawable/divider" >
 
-    </ListView>
+    </ExpandableListView>
 
 
 </LinearLayout>
