--- a/android_search/res/values/arrays.xml
+++ b/android_search/res/values/arrays.xml
@@ -96,7 +96,7 @@
         <!-- <item>Round trip flight from Istanbul to Nice France next Wednesday, stay in a 5 star hotel for one weeks</item> -->
         <!-- <item>Flights from Los Angeles to Paris on November 20, return on November 23th, stay in hotel with pool</item>
         <item>Fly to NY next Sunday, stay 5 nights in Arlignton, return</item> -->
-        <item>Hilton hotels in NY, on Wednesday for two nights</item>
+        <item>Find hotel in NY, on Wednesday for two nights</item>
         <!-- <item>Sorted by price</item>
         <item>5 star hotels</item>
         <item>3 star hotels</item> -->
