--- a/android_search/res/layout/room_list_item.xml
+++ b/android_search/res/layout/room_list_item.xml
@@ -11,6 +11,8 @@
         android:id="@+id/relativeLayout1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" 
+
         >
 
         <TextView
@@ -78,6 +80,36 @@
             android:text="Details" 
             android:textColor="#222222"/>
 
+        <LinearLayout
+            android:id="@+id/roomDescrptionLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/details"
+            android:background="#ffe3e3e3"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:padding="3dp" >
+            
+            <TextView
+                android:id="@+id/roomDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fff"
+                android:textColor="#000"
+                android:maxHeight="40dp"
+                android:scrollbars="vertical"
+                android:text="Lorem ipsum badsfg asdfg dsfg asdf aserfqw "
+                 />
+
+            <Button
+                android:id="@+id/buttonChooseRoom"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Book this room" />
+            
+         </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
