--- a/android_demo/res/values/arrays.xml
+++ b/android_demo/res/values/arrays.xml
@@ -15,4 +15,18 @@
         <item >e</item>
     </string-array>
     
+    <string-array name="entries_vr_service">
+        <item>None</item>
+        <item>Ginger</item>
+        <item>Google Web</item>
+        <item>Google Phone</item>
+    </string-array>
+    <string-array name="entryvalues_vr_service">
+        <item>none</item>
+        <item>ginger_streaming</item>
+        <item>google_streaming</item>
+        <item>google_local</item>
+    </string-array>
+   
+    
 </resources>
