--- a/EvaAPIs/res/layout/listening.xml
+++ b/EvaAPIs/res/layout/listening.xml
@@ -28,7 +28,7 @@
 
     </LinearLayout>
 
-    <com.evaapis.SoundLevelView
+    <com.evaapis.android.SoundLevelView
         android:id="@+id/surfaceView_sound_wave"
         android:layout_width="wrap_content"
         android:layout_height="80dip"
