--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -20,14 +20,14 @@
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
         android:layout_below="@id/swipeytabs"
-        android:layout_above="@+id/search_button"
+        android:layout_above="@+id/bottom_bar"
         android:layout_height="fill_parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_above="@+id/search_button" 
+        android:layout_above="@+id/bottom_bar" 
         android:visibility="gone"
         android:id="@+id/status_panel"
         >
@@ -58,20 +58,45 @@
          />
     
     
+    <RelativeLayout
+        android:id="@id/bottom_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/custom_button_disabled" >
+    
+    
     
     
      <ImageButton
-        android:id="@id/search_button"
+        android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/custom_button"
         android:contentDescription="@string/microphone_button"
         android:onClick="myClickHandler"
-        android:padding="14dp"
+        android:padding="7dp"
         android:src="@drawable/microphone_icon"
-        android:text="@string/button" />
+        android:text="@string/button"
+        android:layout_centerHorizontal="true"
+         />
+     
+     <ImageButton
+         android:id="@+id/restart_button"
+         style="?android:attr/buttonStyleSmall"
+         android:layout_width="48dp"
+         android:layout_height="48dp"
+         android:layout_alignParentTop="true"
+         android:layout_alignParentRight="true"
+         android:layout_marginTop="20dp"
+         android:layout_marginRight="25dp"
+         android:background="@drawable/custom_button"
+         android:onClick="myClickHandler"
+         android:contentDescription="Restart"
+         android:src="@drawable/session_restart"
+         android:padding="3dp"  />
+     </RelativeLayout>
 </RelativeLayout>
