--- a/android_search/res/layout/hotel_details_portrait.xml
+++ b/android_search/res/layout/hotel_details_portrait.xml
@@ -55,7 +55,7 @@
 	            android:layout_centerVertical="true"
 	            android:layout_alignParentRight="true"
 	            android:layout_marginRight="10dp"
-	            android:background="@drawable/button"
+	            android:background="@drawable/custom_button_active"
 	            android:gravity="center"
 	            android:text="Select"
 	            android:textColor="#FFFFFFFF"
@@ -67,7 +67,7 @@
 	            android:layout_height="30sp"
 	            android:layout_centerVertical="true"
 	            android:layout_toLeftOf="@id/selectButton"
-	            android:background="@drawable/button"
+	            android:background="@drawable/custom_button_active"
 	            android:gravity="center"
 	            android:layout_marginRight="10dp"
 	            android:text="Map"
