--- a/android_search/res/drawable/custom_button.xml
+++ b/android_search/res/drawable/custom_button.xml
@@ -3,35 +3,27 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#343434" />
+                android:color="#646484" />
             <stroke
                 android:width="1dp"
-                android:color="#171737" />
+                android:color="#ff88aaff" />
             <corners
                 android:radius="5dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+           
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#343434"
-                android:endColor="#171737"
-                android:angle="270" />
+                android:startColor="#646484"
+                android:endColor="#171757"
+                android:angle="315" />
             <stroke
                 android:width="1dp"
-                android:color="#171717" />
+                android:color="#ff7799dd" />
             <corners
                 android:radius="5dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+            
         </shape>
     </item>
 </selector>
