--- a/android_search/res/drawable/custom_button_active.xml
+++ b/android_search/res/drawable/custom_button_active.xml
@@ -3,35 +3,27 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#547454" />
+                android:color="#545474" />
             <stroke
-                android:width="1dp"
-                android:color="#171737" />
+                android:width="2dp"
+                android:color="#ff99bbff" />
             <corners
                 android:radius="5dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+            
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#547454"
-                android:endColor="#374747"
-                android:angle="270" />
+                android:startColor="#8484d4"
+                android:endColor="#4747a7"
+                android:angle="315" />
             <stroke
-                android:width="1dp"
-                android:color="#171717" />
+                android:width="2dp"
+                android:color="#ff5599ff" />
             <corners
                 android:radius="5dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+            
         </shape>
     </item>
 </selector>
