--- a/android_search/res/drawable/vha_background.xml
+++ b/android_search/res/drawable/vha_background.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">    
        <gradient                
-        android:startColor="#ff0270a8"
-        android:endColor="#ff346882"
+        android:startColor="#d84028"
+        android:endColor="#b22814"
+        android:angle="45"
         />     
 </shape>
