--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/my_chat_in_session_bg"
-    android:orientation="horizontal" >
+    android:background="@drawable/row_mychat_background"
+    android:orientation="horizontal"
+     >
 
     <ImageView
         android:id="@+id/icon"
@@ -13,30 +14,18 @@
         android:src="@drawable/chat_icon" 
         android:contentDescription="@string/chat_icon_description"/>
  
-     <TextView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dip"
-        android:paddingRight="5dip"
-        android:paddingTop="2dip"
-        android:paddingBottom="0dip"
-        android:textStyle="bold"
-        android:gravity="center_vertical"
-        android:typeface="monospace"
-        android:textColor="@color/my_chat_in_session_text"
-        android:textSize="20sp"/>
- 
     
     <TextView
         android:id="@+id/label"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:paddingTop="2dip"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
         android:paddingBottom="7dip"
         android:textColor="@color/my_chat_in_session_text"
+        android:text="Lorem ipsum bla bla asdfg dfswe"
         android:textSize="16sp" />
     
     <EditText 
