--- a/android_search/res/layout/row_vha_chat.xml
+++ b/android_search/res/layout/row_vha_chat.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/eva_chat_in_session_bg"
+    android:background="@color/vha_chat_in_session_bg"
     android:orientation="horizontal" >
 
     <TextView
@@ -13,7 +13,7 @@
         android:paddingBottom="2dip"
         android:paddingLeft="3dip"
         android:paddingRight="3dip"
-        android:textColor="@color/eva_chat_in_session_text"
+        android:textColor="@color/vha_chat_in_session_text"
         android:textSize="16sp" />
 
     <FrameLayout
@@ -29,7 +29,7 @@
         	android:layout_height="match_parent"
             android:contentDescription="@string/chat_icon_description"
             android:padding="2dip"
-            android:src="@drawable/vha_head" />
+            android:src="@drawable/hotel72" />
 
         <ImageView
             android:id="@+id/top_icon"
