--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -148,14 +148,14 @@
     <color name="journey_result_detail_boarder">@color/palette_dark_grey_disabled</color>
     <color name="destination_header_background_gradient_start">#ff9a9a9a</color>
     <color name="destination_header_background_gradient_end">#ff7b7d7b</color>
-    <color name="my_chat_in_session_bg">#ff3d4049</color>
-    <color name="my_chat_in_session_text">#10ff10</color>
-    <color name="my_chat_no_session_bg">#ff4d5059</color>
-    <color name="my_chat_no_session_text">#40cf40</color>
-    <color name="eva_chat_no_session_bg">#dddddd</color>
-    <color name="eva_chat_no_session_text">#909090</color>
-    <color name="eva_chat_in_session_bg">#f4f4f4</color>
-    <color name="eva_chat_in_session_text">#404040</color>
+    <color name="my_chat_in_session_bg">#fdfdfd</color>
+    <color name="my_chat_in_session_text">#4040a0</color>
+    <color name="my_chat_no_session_bg">#d0d0d0</color>
+    <color name="my_chat_no_session_text">#505090</color>
+    <color name="vha_chat_no_session_bg">#dfdfdf</color>
+    <color name="vha_chat_no_session_text">#764545</color>
+    <color name="vha_chat_in_session_bg">#efefef</color>
+    <color name="vha_chat_in_session_text">#604040</color>
     <color name="white">#fff</color>
     <color name="half_black">#88000000</color>
     <color name="non_refundable">#ffd07040</color>
