--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -148,14 +148,14 @@
     <color name="journey_result_detail_boarder">@color/palette_dark_grey_disabled</color>
     <color name="destination_header_background_gradient_start">#ff9a9a9a</color>
     <color name="destination_header_background_gradient_end">#ff7b7d7b</color>
-    <color name="my_chat_in_session_bg">#fdfdfd</color>
+    <color name="my_chat_in_session_bg">#fdfdff</color>
     <color name="my_chat_in_session_text">#4040a0</color>
     <color name="my_chat_no_session_bg">#d0d0d0</color>
     <color name="my_chat_no_session_text">#505090</color>
-    <color name="vha_chat_no_session_bg">#dfdfdf</color>
-    <color name="vha_chat_no_session_text">#764545</color>
-    <color name="vha_chat_in_session_bg">#efefef</color>
-    <color name="vha_chat_in_session_text">#604040</color>
+    <color name="vha_chat_no_session_bg">#f2eaea</color>
+    <color name="vha_chat_no_session_text">#756060</color>
+    <color name="vha_chat_in_session_bg">#f2efef</color>
+    <color name="vha_chat_in_session_text">#703030</color>
     <color name="white">#fff</color>
     <color name="half_black">#88000000</color>
     <color name="non_refundable">#ffd07040</color>
