--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -75,10 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/transition_button_activate"
         android:contentDescription="@string/microphone_button"
         android:onClick="myClickHandler"
-        android:padding="10dp"
+        android:padding="12dp"
         android:src="@drawable/microphone_icon"
         android:text="@string/button"
         android:layout_centerHorizontal="true"
@@ -91,8 +91,8 @@
          android:layout_height="48dp"
          android:layout_alignParentTop="true"
          android:layout_alignParentRight="true"
-         android:layout_marginTop="27dp"
-         android:layout_marginRight="25dp"
+         android:layout_marginTop="30dp"
+         android:layout_marginRight="28dp"
          android:background="@drawable/custom_button"
          android:onClick="myClickHandler"
          android:contentDescription="Restart"
