--- a/android_search/res/layout/hotel_map.xml
+++ b/android_search/res/layout/hotel_map.xml
@@ -1,8 +1,14 @@
-  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" 
+    android:id="@+id/map_container" >
+
+<!--   <fragment 
           android:id="@+id/map"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.SupportMapFragment"/>
+          android:name="com.google.android.gms.maps.SupportMapFragment"/> -->
   
 <!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,3 +27,4 @@
 /> -->
 <!-- computer android:apiKey="0Q5WyeldvY7hGbyQQFIZmdVmMjtOdi0zIMyWzBw" -->
 <!-- </RelativeLayout> -->
+</RelativeLayout>
