--- a/android_search/res/drawable/chat_background.xml
+++ b/android_search/res/drawable/chat_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">    
-	<gradient
-        android:endColor="#ffe3e3e3"        
-        android:startColor="#ffffffff"
-        android:angle="270"/>
+       <gradient
+        android:endColor="#c3c3c3"        
+        android:startColor="#efefef"
+        android:angle="315"/>    
 </shape>
