--- a/android_search/res/layout/fragment_chat.xml
+++ b/android_search/res/layout/fragment_chat.xml
@@ -10,13 +10,14 @@
 
     <ListView
         android:id="@+id/chat_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:drawSelectorOnTop="true"
-        android:stackFromBottom="true"
+        android:stackFromBottom="false"
+        android:background="@drawable/chat_background"
         android:transcriptMode="alwaysScroll" >
     </ListView>
 
